feat: new location

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="./my_favicon.ico" type="image/ico" sizes="any"/>
+    <link rel="icon" href="./my_favicon.ico" type="image/ico" sizes="any">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>CV Pavel Melnikov</title>
+    <title>CV Paweł </title>
 </head>
 <body>
 <div class="page">
@@ -27,7 +27,7 @@
                 <li class="nav__item"><a class="nav__link" href="#languages">Courses</a></li>
                 <li class="nav__item"><a class="nav__link" href="#languages">Languages</a></li>
             </ul>
-            <h1 class="content__name">Pavel Melnikov</h1>
+            <h1 class="content__name">Paweł Melnikau</h1>
         </nav>
     </header>
     <div class="container">
@@ -54,20 +54,22 @@
                 <h2 class="sidebar__title">Contacts</h2>
                 <ul class="contact__list">
                     <li class="sidebar__container contact__item">
-                        <h3 class="sidebar__subtitle">Phone (A1)</h3>
-                        <div class="sidebar__content">+375 (29)-320-02-91</div>
+                        <h3 class="sidebar__subtitle">Phone mobile</h3>
+                        <div class="sidebar__content">+48 518 008 658</div>
                     </li>
                     <li class="sidebar__container contact__item">
                         <h3 class="sidebar__subtitle">Email</h3>
-                        <div class="sidebar__content">paulo.melnikov@icloud.com</div>
+                        <div class="sidebar__content"><a href="mailto:nikomme@gmail.com" style="text-decoration: none; color: rgb(255, 255, 255);">nikomme@gmail.com</a></div>
                     </li>
                     <li class="sidebar__container contact__item">
                         <h3 class="sidebar__subtitle">Telegram</h3>
-                        <div class="sidebar__content">@pavelmelnikov1988</div>
+                        <div class="sidebar__content"></div>
+                        <div class="sidebar__content"><a  href = "https://t.me/pawel_mel" style="text-decoration: none; color: rgb(255, 255, 255);">@pawel_mel</a></div>
+                       
                     </li>
                     <li class="sidebar__container contact__item">
                         <h3 class="sidebar__subtitle">Location</h3>
-                        <div class="sidebar__content">Mogilev, Belarus</div>
+                        <div class="sidebar__content">Currently: Warsaw, Poland</div>
                     </li>
                 </ul>
             </div>
@@ -75,10 +77,10 @@
                 <h2 class="sidebar__title">Education</h2>
                 <div class="sidebar__container">
                     <ul class="sidebar__content">
-                        <li>Oshmyany, middle school №1, Dates Attended: 1995-2006, Pupil degree—computer science and
+                        <li>Oshmyany, middle school №1, dates attended: 1995-2006, Pupil degree—computer science and
                             English class profile.
                         </li>
-                        <li>Mogilev, Belarusian-Russian university, Dates Attended: 2006 – 2011 Student
+                        <li>Mogilev, Belarusian-Russian university, dates attended: 2006 – 2011 Student
                             Degree—automation of technological processes and production.
                         </li>
                     </ul>
@@ -91,6 +93,7 @@
                         <li>Belarusian: native language</li>
                         <li>Russian: native language</li>
                         <li>English: А2 Pre-Intermediate</li>
+                        <li>Polish: learning now</li>
                     </ul>
                 </div>
             </div>
@@ -112,7 +115,21 @@
                 <div class="experience__item">
                     <table>
                         <tr>
-                            <td class="experience__date">February 2016 — currently (total 10 years 11 months)</td>
+                            <td class="experience__date">August 2022 -  November 2022 (Total 11 years 2 months)</td>
+                            <td class="experience__job">
+                                <h3 class="content__subtitle">CNC machine operator, UPSPE
+                                    Technolit.
+                                </h3>
+                                <ul>
+                                    <li class="content__text">Ferrous metallurgy (production of cast iron, steel, rolled products)
+                                    </li>
+                                    <li class="content__text">Non-ferrous metallurgy (smelting, rolled metal).</li>
+                                    <li class="content__text">Metal products, metal structures (manufacturing)</li>
+                                </ul>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="experience__date">February 2016 — June 2022</td>
                             <td class="experience__job">
                                 <h3 class="content__subtitle">Process - Engineer of furniture production, FLLC
                                     Mebelain.
@@ -133,7 +150,7 @@
                             </td>
                         </tr>
                         <tr>
-                            <td class="experience__date">August 2015 - February 2016</td>
+                            <td class="experience__date">February 2015 - February 2016</td>
                             <td class="experience__job">
                                 <h3 class="content__subtitle">Production efficiency specialist, FLLC Mebelain.</h3>
                                 <ul>
@@ -155,7 +172,7 @@
                             </td>
                         </tr>
                         <tr>
-                            <td class="experience__date">July 2013 - July 2014</td>
+                            <td class="experience__date">February 2013 - July 2014</td>
                             <td class="experience__job">
                                 <h3 class="content__subtitle">Tool shop foreman, OAO Olsa.</h3>
                                 <ul>
@@ -248,7 +265,7 @@
                         </div>
                     </li>
                     <li class="skills__item">
-                        <h3 class="skills__title">JS</h3>
+                        <h3 class="skills__title">JS Native</h3>
                         <div class="skills__group">
                             <div class="skills__dot skills__dot--blue"></div>
                             <div class="skills__dot skills__dot--blue"></div>
@@ -297,16 +314,7 @@
                             <div class="skills__dot"></div>
                         </div>
                     </li>
-                    <li class="skills__item">
-                        <h3 class="skills__title">jQuery</h3>
-                        <div class="skills__group">
-                            <div class="skills__dot skills__dot--blue"></div>
-                            <div class="skills__dot skills__dot--blue"></div>
-                            <div class="skills__dot skills__dot--blue"></div>
-                            <div class="skills__dot"></div>
-                            <div class="skills__dot"></div>
-                        </div>
-                    </li>
+                   
                     <li class="skills__item">
                         <h3 class="skills__title">Git</h3>
                         <div class="skills__group">
@@ -317,17 +325,7 @@
                             <div class="skills__dot"></div>
                         </div>
                     </li>
-                    <li class="skills__item">
-                        <h3 class="skills__title">NPM</h3>
-                        <div class="skills__group">
-                            <div class="skills__dot skills__dot--blue"></div>
-                            <div class="skills__dot skills__dot--blue"></div>
-                            <div class="skills__dot skills__dot--bluegit "></div>
-                            <div class="skills__dot"></div>
-                            <div class="skills__dot"></div>
-                        </div>
-                    </li>
-                </ul>
+                  </ul>
             </section>
             <section class="skills" id="softskills">
                 <h2 class="content__title">Soft skills</h2>
@@ -378,15 +376,15 @@
                 <h2 class="content__title">My projects</h2>
                 <div class="content__text code__text">
                     <div class="code__projects">
-                        <a class="slider project__img" target="_blank"
+                        <a class="clock project__img" target="_blank"
                            href="https://pavelm1988.github.io/cssMemSlider/cssMemSlider/">
                             <div class="mask"></div>
-                            <h4 class="project__title whoke-title">SliderCSS</h4>
+                            <h4 class="project__title whoke - title ">SliderCSS</h4>
                             <img src="img/SliderCSS.png" alt="Slider image">
                         </a>
-                        <a class="museum project__img" target="_blank"
+                        <a class="clock project__img" target="_blank"
                            href="https://rolling-scopes-school.github.io/pavelm1988-JSFE2021Q1/js-clock/">
-                            <h4 class="project__title">JS Clock</h4>
+                            <h4 class="project__title whoke - title ">JS Clock</h4>
                             <div class="mask"></div>
                             <img src="img/js_clock.png" alt="Clock image">
                         </a>
@@ -402,9 +400,9 @@
     </div>
     <footer class="footer">
         <div class="footer__container" id="Selfintro">
-            <div class="footer__date">Updated 2022-06-01 by Pavel Melnikov</div>
+            <div class="footer__date">Updated 2023-01-011 by Paweł </div>
 
-            <a class="logo" href="https://www.youtube.com/watch?v=hRSMbOwmllM">
+            <a class="logo" href="#">
                 <img class="icon" src="img/you_tube.png" alt="YouTube_logo">
             </a>
         </div>
